Your message here

--- a/Toybox-3/index.html
+++ b/Toybox-3/index.html
@@ -10,7 +10,7 @@
   <!-- Intro Modal -->
   <div id="intro-modal" class="modal">
     <div class="modal-content">
-      <h1>🌱 Light Toybox 2</h1>
+      <h1>🌱 Light Toybox 3</h1>
       <p>Generate light for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything creates light.</p>
       <button id="start-button">Continue</button>
     </div>
@@ -40,11 +40,11 @@
 
     <div id="toolbox">
       <p>Toolbox:</p>
-      <img id="sun" src="assets/light/sun.png" class="draggable" title="Sunlight" />
-      <img id="converter" src="assets/light/converter.png" class="draggable" title="Converter" />
-      <img id="light-bulb" src="assets/light/light-bulb.png" class="draggable" title="Light Bulb" />
-      <img id="pizza" src="assets/light/pizza.png" class="draggable" title="Pizza" />
-      <img id="cardboard-box" src="assets/light/cardboard-box.png" class="draggable" title="Cardboard Box" />
+      <img id="sun" src="assets/light/sun.png" class="draggable" title="Sunlight" style="touch-action: none;" />
+      <img id="converter" src="assets/light/converter.png" class="draggable" title="Converter" style="touch-action: none;" />
+      <img id="light-bulb" src="assets/light/light-bulb.png" class="draggable" title="Light Bulb" style="touch-action: none;" />
+      <img id="pizza" src="assets/light/pizza.png" class="draggable" title="Pizza" style="touch-action: none;" />
+      <img id="cardboard-box" src="assets/light/cardboard-box.png" class="draggable" title="Cardboard Box" style="touch-action: none;" />
     </div>
   </div>
 
