Your message here

--- a/Toybox-3/index.html
+++ b/Toybox-3/index.html
@@ -43,7 +43,7 @@
   <!-- Intro Modal -->
   <div id="intro-modal" class="modal">
     <div class="modal-content">
-      <h1>🌱 Light Toybox 4</h1>
+      <h1>🌱 Light Toybox 5</h1>
       <p>Generate light for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything creates light.</p>
       <button id="start-button">Continue</button>
     </div>
@@ -106,7 +106,7 @@
     </div>
 
     <!-- Toolbox with assets; note that assets should be resized via CSS to 54x54 (or adjusted as per portrait/landscape rules) -->
-    <div id="toolbox">
+    <div style="display: flex; justify-content: center; gap: 6px; max-width: 324px; padding: 8px; margin: 0 auto;">
       <img class="draggable" src="assets/light/sun.png" data-id="sun" title="Sunlight" />
       <img class="draggable" src="assets/light/converter.png" data-id="converter" title="Converter" />
       <img class="draggable" src="assets/light/light-bulb.png" data-id="light-bulb" title="Light Bulb" />
