Your message here

--- a/Toybox-3/index.html
+++ b/Toybox-3/index.html
@@ -43,7 +43,7 @@
   <!-- Intro Modal -->
   <div id="intro-modal" class="modal">
     <div class="modal-content">
-      <h1>🌱 Light Toybox 7</h1>
+      <h1>🌱 Light Toybox 8</h1>
       <p>Generate light for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything creates light.</p>
       <button id="start-button">Continue</button>
     </div>
@@ -84,11 +84,11 @@
       <div class="cell" data-index="17"></div>
       <!-- Row 3 (valid drop zones): indices 18-23 -->
       <div class="cell" data-index="18"></div>
-      <div class="cell drop-zone" data-index="19"></div>  <!-- B3 -->
-      <div class="cell drop-zone" data-index="20"></div>  <!-- C3 -->
-      <div class="cell drop-zone" data-index="21"></div>  <!-- D3 -->
+      <div class="cell drop-zone" data-index="19"></div>  <!-- A3 -->
+      <div class="cell" data-index="20"></div>
+      <div class="cell drop-zone" data-index="21"></div>  <!-- C3 -->
       <div class="cell" data-index="22"></div>
-      <div class="cell" data-index="23"></div>
+      <div class="cell drop-zone" data-index="23"></div>  <!-- E3 -->
       <!-- Row 2: indices 24-29 -->
       <div class="cell" data-index="24"></div>
       <div class="cell" data-index="25"></div>
